--- a/resources/bungee.yml
+++ b/resources/bungee.yml
@@ -1,3 +1,6 @@
 name: SimpleBroadcast
 main: fr.etercube.simplebroadcast.Main
 version: 1
+commands:
+  broadcast:
+    permission: eterbroadcast.use
